# dark_emulator2_public

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  _LOCAL_PUBLIC_RELEASE_STEPS.md  pyproject.toml  requirements.txt
dark_emulator2/: __init__.py  __version__.py  class_lin_power.py  constants.py  cosm_tools.py  dq2_emulator.py  parameters.py  reg_lin_pk.py  reg_pk.py  utils.py
dark_emulator2/data/lin_pk/fiducial/: input_param.ini
dark_emulator2/data/nlin_pk/: parameter_lists.txt
dark_emulator2/data/nlin_pk/fiducial/: input_param.ini
dark_emulator2/data/nlin_pk/noise/: memo.md
dark_emulator2/data/torch/amp/: memo.txt
dark_emulator2/data/torch/lin_pk/: lin_pk_cb.pth  lin_ratio.pth  memo.txt
dark_emulator2/data/torch/nlin_pk/: memo.txt
dark_emulator2/derived/: __init__.py  correlation.py  fftlog.py  lensing.py  redshift_dist_func.py
docs/: api.rst  conf.py  index.rst  quickstart.rst  requirements.txt
docs/api/: dark_emulator2.rst  parameters.rst
notebook/: 00_overview.ipynb  01_quick_start.ipynb  02_cosmological_parameter.ipynb  03a_xi_and_cl.ipynb  03a_xi_cl_examples.ipynb  03b_cl_cosm.ipynb  03b_extended_cosmology_response.ipynb  04_advanced_settings.ipynb  05a_compare_public_emulators_pk.ipynb  05b_comp_fitting_formula_pk.ipynb  05c_comp_linear_pk.ipynb  06a_compare_public_emulators_cl.ipynb  06b_comp_fitting_formula_cl.ipynb
