[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "dark_emulator2"
version = "1.0.1"
authors = [
  { name = "Satoshi Tanaka" },
  { name = "Takahiro Nishimichi" },
  { name = "Yosuke Kobayashi" },
]
description = "Matter power spectrum emulator in the non-flat nu w0 wa CDM cosmology model."
keywords = [
  "cosmology",
  "dark energy",
  "dark matter",
  "large-scale structure",
  "matter power spectrum",
  "emulator",
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy",
  "scipy>=1.10",
  "torch",
  "frozendict",
  "classy>=3.0",
  "packaging",
]

[project.urls]
Project = "https://darkquestcosmology.github.io/"
Source = "https://github.com/DarkQuestCosmology/dark_emulator2_public"

[tool.setuptools.packages.find]
include = ["dark_emulator2*"]


[tool.setuptools.package-data]
dark_emulator2 = [
  "data/lin_pk/parameter_lists.txt",
  "data/lin_pk/fiducial/*.dat",

  "data/nlin_pk/parameter_lists.txt",
  "data/nlin_pk/fiducial/*.dat",
  "data/nlin_pk/noise/*.dat",
  "data/nlin_pk/noise/release/*.dat",

  "data/torch/amp/amp.pth",
  "data/torch/lin_pk/*.pth",
  "data/torch/nlin_pk/release/*.pth",

  #data/nlin_pk/noise/develop/*.dat,
  #data/torch/nlin_pk/develop/*.pth,
]
